# ROS2-Project---SCARA-Robot

./: README.md
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: waypoints.json
src/robot_bringup/launch/: robot_system.launch.py
src/robot_bringup/rviz/: scara_robot.rviz
src/robot_bringup/urdf/: scara_robot.urdf
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/src/: motion_publisher.cpp  robot_driver.cpp
